# dipin

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
dipin/: __init__.py  container.py  interface.py  main.py  resolver.py  util.py
examples/fastapi-sqlmodel-async/: .gitignore  README.md  pyproject.toml
examples/fastapi-sqlmodel-async/fastapi_sqlmodel_async/: app.py  di.py  models.py  repositories.py  services.py  settings.py  templates.py
examples/fastapi-sqlmodel-async/fastapi_sqlmodel_async/routers/: public.py
examples/fastapi-sqlmodel-async/fastapi_sqlmodel_async/templates/: layout.html  posts_detail.html  posts_list.html
examples/fastapi-sqlmodel-async/migrations/: env.py
examples/fastapi-sqlmodel-async/migrations/versions/: 27f30917f875_.py
examples/fastapi-sqlmodel-async/tests/: conftest.py  test_app.py
tests/: test_autowiring.py  test_container_factories.py  test_container_instances.py  test_fastapi.py  test_nested.py  test_resolver.py  test_resolving_container.py  test_simple.py  test_stock.py  test_util.py
