[project]
name = "dipin"
description = "Dependency injection helper for FastAPI"
dependencies = [
    "fastapi>=0.111.0",
    "asyncer>=0.0.7",
]
readme = "README.md"
authors = [{ name = "Ross Masters", email = "ross@rossmasters.com" }]
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/rmasters/dipin"
Issues = "https://github.com/rmasters/dipin/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "dipin//__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dipin"]
